--- a/PT2.vcxproj.filters
+++ b/PT2.vcxproj.filters
@@ -26,5 +26,20 @@
     <ClInclude Include="DNAstring.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ArrayInt.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VarianteInterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedListVariente.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ArrayIntVariente.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
