--- a/PT2.vcxproj.filters
+++ b/PT2.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="ArrayIntVariente.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StringVariente.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
