zahir hier komt het

--- a/PT2.vcxproj
+++ b/PT2.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="PT2.cpp" />
+    <ClCompile Include="StringVariente.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DNAstring.h" />
