--- a/PT2.vcxproj.filters
+++ b/PT2.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="PT2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StringVariente.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DNAstring.h">
